<resources>
    <string name="app_name">xAndroid</string>
    <string name="activity_title_androlua">Androlua</string>
    <string name="activity_title_blur">Blur</string>
    <string name="title_activity_downloader">Downloader</string>
    <string name="title_activity_simple_downloader">Downloader - Simple</string>
    <string name="title_activity_particle">Particle</string>
    <string name="title_activity_particle_drop">Particle - Drop</string>
    <string name="title_activity_frame_sequence">FrameSequence</string>

    <string name="scheme_key">Scheme:</string>
    <string name="scheme_java">JAVA</string>
    <string name="scheme_native">Native</string>
    <string name="scheme_render">Render Script</string>
    <string name="scheme_opengl">OpenGL</string>
    <string name="algorithm_key">Algorithm:</string>
    <string name="algorithm_gaussian">Gaussian</string>
    <string name="algorithm_stack">Stack</string>
    <string name="algorithm_box">Box</string>
    <string name="radius_key">Radius:</string>
    <string name="sample_key">Sample:</string>
    <string name="scale_key">Scale:</string>

    <string name="framesequence_start" translatable="false">start</string>
    <string name="framesequence_stop" translatable="false">stop</string>
    <string name="framesequence_vis" translatable="false">vis</string>
    <string name="framesequence_invis" translatable="false">invis</string>

    <string name="framesequence_circle_mask" translatable="false">Toggle Circle Mask</string>
</resources>
