<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/fab_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".framesequence.FrameSequenceActivity"
    tools:showIn="@layout/activity_frame_sequence">


    <View
        android:id="@+id/drawableview"
        android:layout_width="220dp"
        android:layout_height="190dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <Button
        android:id="@+id/start"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/framesequence_start"
        android:textAllCaps="false"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/drawableview" />

    <Button
        android:id="@+id/stop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/framesequence_stop"
        android:textAllCaps="false"
        app:layout_constraintBottom_toBottomOf="@+id/start"
        app:layout_constraintEnd_toStartOf="@+id/vis"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/start"
        app:layout_constraintTop_toTopOf="@+id/start" />

    <Button
        android:id="@+id/vis"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/framesequence_vis"
        android:textAllCaps="false"
        app:layout_constraintBottom_toBottomOf="@+id/stop"
        app:layout_constraintEnd_toStartOf="@+id/invis"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/stop"
        app:layout_constraintTop_toTopOf="@+id/stop" />

    <Button
        android:id="@+id/invis"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/framesequence_invis"
        android:textAllCaps="false"
        app:layout_constraintBottom_toBottomOf="@+id/vis"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/vis"
        app:layout_constraintTop_toTopOf="@+id/vis" />

    <Button
        android:id="@+id/circle_mask"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/framesequence_circle_mask"
        android:textAllCaps="false"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/start" />

</androidx.constraintlayout.widget.ConstraintLayout>